added margin to contact links. Added heroku deployment link to readme.md

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -25,6 +25,9 @@ body {
   position: fixed;
   width: 100%;
 }
+.profile-link{
+  margin-top: 15px;
+}
 #profile-picture {
   width: 20%;
   float: left;
