--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -20,17 +20,32 @@
             <input type="submit" value="Submit">
         </form> --}}
         <div id="profile-links">
+            <div class="row profile-link">
             <span>[</span>
             <a href="https://github.com/pattenbranden" target="_blank"><i class="fa fa-github-square"></i> My Github Account</a>
-            <span>] <br> [</span>
+            <span>]
+
+            </div>
+            <div class="row profile-link"> <br> [</span>
             <a href="https://www.linkedin.com/in/branden-patten/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i> My Linkedin Profile</a>
-            <span>] <br> [</span>
+            <span>]
+
+            </div>
+            <div class="row profile-link"> <br> [</span>
             <a href="/resume" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> My Résumé</a>
-            <span>]</span>
+            <span >]</span>
+
+            </div>
+            <div class="row profile-link">
+            <span >Phone: 239-699-2087</span>
+
+            </div>
+            <div class="row profile-link">
+            <span >Email: Patten.Branden@gmail.com</span>
+
+            </div>
             <br>
-            <span>Phone: 239-699-2087</span>
             <br>
-            <span>Email: Patten.Branden@gmail.com</span>
         </div>
     </div>
 </div>
