added googlebooks project and clicky-game project to projects

--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -9,8 +9,9 @@
         <img class="m-1" id="profile-picture" src="./images/Profile-Picture.jpg"
             alt="Branden Patten's Profile-Picture.jpg">
         <div id="bio-text">
-            <h4><strong>Hi, I'm Branden! A Web Dev from South West Florida!</strong></h4>
-            <h5><strong>Sequelize, Express, Handlebars, Nodejs, my SEHN-Stack game is strong.</strong></h3>
+            <h3><strong>Hi, I'm Branden! A Web Dev from South West Florida!</strong></h3>
+            <h4><strong>Sequelize, Express, Handlebars, Nodejs, React, and Mongo.</strong></h4>
+            <h5><strong>I enjoy back-end work, it seems to be my strong suit.</strong></h5>
                 <p>As a dedicated learner, I will pour countless hours into a project until I understand it
                     inside
                     and
