--- a/views/projects.handlebars
+++ b/views/projects.handlebars
@@ -67,6 +67,20 @@
                         <h3 class="project-title">Compatibility Match</h3>
                     </a>
                 </div>
+                <div class="project" id="ps2-react-clicky">
+                    <a href="https://pattenbranden.github.io/PS2-clicky-game-react/">
+
+                        <img class="project-image" src="./images/ps2-cliky-game.PNG" alt="ps2-react-clicky image">
+                        <h3 class="project-title">React Clicky Game</h3>
+                    </a>
+                </div>
+                <div class="project" id="react-googleBooks-mongo">
+                    <a href="https://google-books-react-bp.herokuapp.com/">
+
+                        <img class="project-image" src="./images/react-googlebooks-mongo.PNG" alt="react googleBooks Mongo image">
+                        <h3 class="project-title">GoogleBooks reading list</h3>
+                    </a>
+                </div>
 
             </div>
         </div>
