changed file extension case. sensitivity issue

--- a/views/projects.handlebars
+++ b/views/projects.handlebars
@@ -16,7 +16,7 @@
                 <div class="project" id="corona-blog">
                     <a href="https://github.com/AlanFord9/project-2">
 
-                        <img class="project-image" src="./images/corona-blog.PNG" alt="social-distance-network image">
+                        <img class="project-image" src="./images/corona-blog.png" alt="social-distance-network image">
                         <h3 class="project-title">The Social Distance Network</h3>
                     </a>
                 </div>
