added train scheduler to projects

--- a/views/projects.handlebars
+++ b/views/projects.handlebars
@@ -81,6 +81,13 @@
                         <h3 class="project-title">GoogleBooks reading list</h3>
                     </a>
                 </div>
+                <div class="project" id="train-scheduler">
+                    <a href="https://pattenbranden.github.io/Train-Scheduler/">
+
+                        <img class="project-image" src="./images/train-scheduler.PNG" alt="train scheduler image">
+                        <h3 class="project-title">Train Scheduler</h3>
+                    </a>
+                </div>
 
             </div>
         </div>
